Serialize, deserialize and dump oppf byttegruppe.

--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.
         RefRefusjonsvilkarList.cpp RefRefusjonsvilkarList.h PRefusjonshjemmel.cpp PRefusjonshjemmel.h
         POppfRefusjon.cpp POppfRefusjon.h PRefusjonskode.cpp PRefusjonskode.h RefusjonskodeList.cpp RefusjonskodeList.h
         PStrukturertVilkar.cpp PStrukturertVilkar.h PVilkar.cpp PVilkar.h POppfVilkar.cpp POppfVilkar.h
-        PReferanseelement.cpp PReferanseelement.h PVarselSlv.cpp PVarselSlv.h POppfVarselSlv.cpp POppfVarselSlv.h)
+        PReferanseelement.cpp PReferanseelement.h PVarselSlv.cpp PVarselSlv.h POppfVarselSlv.cpp POppfVarselSlv.h
+        PByttegruppe.cpp PByttegruppe.h POppfByttegruppe.cpp POppfByttegruppe.h)
 
 include_directories(packed ${Boost_INCLUDE_DIRS} )
