Import additional fest structures into db.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,3 +48,14 @@ add_executable(copyfestdata copyfestdata.cpp cppmain.cpp cppmain.h FestDeseriali
 target_link_libraries(copyfestdata packed)
 target_link_libraries(copyfestdata decoded)
 target_link_libraries(copyfestdata fest)
+
+add_executable(addtofest addtofest.cpp cppmain.cpp cppmain.h FestDeserializer.cpp FestDeserializer.h
+        FestDeserializer_Preload.cpp FestSerializer.cpp FestSerializer.h FestVectors.cpp FestVectors.h
+        FestZip.cpp FestZip.h libzip_zip.cpp libzip_zip.h libzip_file.cpp libzip_file.h exttype_zip_file.h
+        FestObjectStream.cpp FestObjectStream.h XMLParser.cpp XMLParser.h)
+
+target_link_libraries(addtofest packed)
+target_link_libraries(addtofest decoded)
+target_link_libraries(addtofest fest)
+target_link_libraries(addtofest -lexpat)
+target_link_libraries(addtofest ${libzip_LIBRARIES})
