--- a/Test/Struct/Packed/CMakeLists.txt
+++ b/Test/Struct/Packed/CMakeLists.txt
@@ -4,19 +4,16 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(pstringtest PStingTest.cpp)
 target_include_directories(pstringtest PRIVATE ../../../include)
-target_link_libraries(pstringtest PRIVATE packed)
-target_link_libraries(pstringtest PRIVATE decoded)
+target_link_libraries(pstringtest PRIVATE medfest)
 
 add_executable(pfestidtest PFestIdTest.cpp)
 target_include_directories(pfestidtest PRIVATE ../../../include)
-target_link_libraries(pfestidtest PRIVATE packed)
-target_link_libraries(pfestidtest PRIVATE decoded)
+target_link_libraries(pfestidtest PRIVATE medfest)
 target_include_directories(pfestidtest PRIVATE ../../../include)
 
 add_executable(festuuidlisttest FestUuidListTest.cpp)
 target_include_directories(festuuidlisttest PRIVATE ../../../include)
-target_link_libraries(festuuidlisttest PRIVATE packed)
-target_link_libraries(festuuidlisttest PRIVATE decoded)
+target_link_libraries(festuuidlisttest PRIVATE medfest)
 
 add_test(PStringTest pstringtest)
 add_test(PFestIdTest pfestidtest)
