RefRefusjonsvilkar TilDato v1.2.0 of data format.

--- a/Fest/CMakeLists.txt
+++ b/Fest/CMakeLists.txt
@@ -36,7 +36,7 @@ add_library(fest OBJECT Fest.cpp FestIdObject.cpp FestIdObject.h KatLegemiddelMe
         XmlKortdose.cpp XmlKortdose.h XmlBeskrivelseTerm.cpp XmlBeskrivelseTerm.h
         XmlLegemiddelforbruk.cpp XmlLegemiddelforbruk.h XmlDosering.cpp XmlDosering.h
         XmlDoseFastTidspunkt.cpp XmlDoseFastTidspunkt.h XmlFastDose.cpp XmlFastDose.h
-        XmlUtleveresTilDato.cpp XmlUtleveresTilDato.h)
+        XmlUtleveresTilDato.cpp XmlUtleveresTilDato.h XmlTilDato.cpp XmlTilDato.h)
 
 include_directories(fest ${Boost_INCLUDE_DIRS} )
 include_directories(fest ../include)
