--- a/Test/Struct/Packed/CMakeLists.txt
+++ b/Test/Struct/Packed/CMakeLists.txt
@@ -4,20 +4,56 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(pstringtest PStingTest.cpp)
 target_include_directories(pstringtest PRIVATE ../../../include)
-target_link_libraries(pstringtest PRIVATE medfest)
+if (WIN32)
+    target_link_libraries(pstringtest PRIVATE medfesttestobj)
+    target_link_libraries(pstringtest PRIVATE fest)
+    target_link_libraries(pstringtest PRIVATE packed)
+    target_link_libraries(pstringtest PRIVATE decoded)
+    target_link_libraries(pstringtest PRIVATE ${EXPAT_LIBRARIES})
+    target_link_libraries(pstringtest PRIVATE ${libzip_LIBRARIES})
+else()
+    target_link_libraries(pstringtest PRIVATE medfest)
+endif()
 
 add_executable(pfestidtest PFestIdTest.cpp)
 target_include_directories(pfestidtest PRIVATE ../../../include)
-target_link_libraries(pfestidtest PRIVATE medfest)
+if (WIN32)
+    target_link_libraries(pfestidtest PRIVATE medfesttestobj)
+    target_link_libraries(pfestidtest PRIVATE fest)
+    target_link_libraries(pfestidtest PRIVATE packed)
+    target_link_libraries(pfestidtest PRIVATE decoded)
+    target_link_libraries(pfestidtest PRIVATE ${EXPAT_LIBRARIES})
+    target_link_libraries(pfestidtest PRIVATE ${libzip_LIBRARIES})
+else()
+    target_link_libraries(pfestidtest PRIVATE medfest)
+endif()
 target_include_directories(pfestidtest PRIVATE ../../../include)
 
 add_executable(festuuidlisttest_0_0_0 FestUuidListTest_0_0_0.cpp)
 target_include_directories(festuuidlisttest_0_0_0 PRIVATE ../../../include)
-target_link_libraries(festuuidlisttest_0_0_0 PRIVATE medfest)
+if (WIN32)
+    target_link_libraries(festuuidlisttest_0_0_0 PRIVATE medfesttestobj)
+    target_link_libraries(festuuidlisttest_0_0_0 PRIVATE fest)
+    target_link_libraries(festuuidlisttest_0_0_0 PRIVATE packed)
+    target_link_libraries(festuuidlisttest_0_0_0 PRIVATE decoded)
+    target_link_libraries(festuuidlisttest_0_0_0 PRIVATE ${EXPAT_LIBRARIES})
+    target_link_libraries(festuuidlisttest_0_0_0 PRIVATE ${libzip_LIBRARIES})
+else()
+    target_link_libraries(festuuidlisttest_0_0_0 PRIVATE medfest)
+endif()
 
 add_executable(festuuidlisttest FestUuidListTest.cpp)
 target_include_directories(festuuidlisttest PRIVATE ../../../include)
-target_link_libraries(festuuidlisttest PRIVATE medfest)
+if (WIN32)
+    target_link_libraries(festuuidlisttest PRIVATE medfesttestobj)
+    target_link_libraries(festuuidlisttest PRIVATE fest)
+    target_link_libraries(festuuidlisttest PRIVATE packed)
+    target_link_libraries(festuuidlisttest PRIVATE decoded)
+    target_link_libraries(festuuidlisttest PRIVATE ${EXPAT_LIBRARIES})
+    target_link_libraries(festuuidlisttest PRIVATE ${libzip_LIBRARIES})
+else()
+    target_link_libraries(festuuidlisttest PRIVATE medfest)
+endif()
 
 add_test(PStringTest pstringtest)
 add_test(PFestIdTest pfestidtest)
