ValidUntil on Byttegruppe.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,12 @@ add_subdirectory(Test)
 
 if (WIN32)
    add_library(medfesttestobj OBJECT FestZip.cpp libzip_zip.cpp libzip_file.cpp FestObjectStream.cpp XMLParser.cpp
-           FestSerializer.cpp FestDeserializer.cpp FestVectors.cpp FestDeserializer_Preload.cpp
-           include/Struct/Packed/packed.h)
+           FestSerializer_0.cpp FestSerializer.cpp FestDeserializer.cpp FestVectors.cpp
+           FestDeserializer_Preload.cpp include/Struct/Packed/packed.h)
 endif()
 
 add_library(medfest SHARED FestZip.cpp libzip_zip.cpp libzip_file.cpp FestObjectStream.cpp XMLParser.cpp
-        FestSerializer.cpp FestDeserializer.cpp FestVectors.cpp FestDeserializer_Preload.cpp
+        FestSerializer_0.cpp FestSerializer.cpp FestDeserializer.cpp FestVectors.cpp FestDeserializer_Preload.cpp
         include/Struct/Packed/packed.h)
 set_target_properties(medfest PROPERTIES SOVERSION 13 VERSION 13.0.0)
 include_directories(medfest include)
